CAR-000 Fixed minor grammatical and spelling errors.

--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -4,10 +4,10 @@
         <h1>yourCareerFair</h1>
     </div>
     <p>
-        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real-time for users to see. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and helping all people to find appropriate, engaging, and compatible employment.  
+        yourCareerFair offers unparalleled, free, search and screening functionality for both applicants and recruiters. Using standardized user inputs as well as proprietary machine learning and AI algorithms, this platform is capable of comprehensively assessing the estimated compatibility of any user and position pair in real-time for users to see and utilize. In addition, yourCareerFair leverages this algorithm in its search process, allowing for applicants and recruiters to search for positions and applicants based on, in part, qualification level estimates and other pertinent metrics. For those who prefer a more traditional search, yourCareerFair also allows for searches filtered on other variables such as required skills, education, and title. Our hope is that these utilities are effective at attenuating the pernicious effects of labor market inefficiency and helping all people to find appropriate, engaging, and compatible employment.
         <br>
         <br>
-        yourCareerFair provides additional free services on top of its search engine and qualification level estimate assessments. The application maintains free application management and applicant tracking system functionality for all users. It allows recruiters to save notes on applicants, immediately notifies applicants when a recruiter makes a decision and allows for bulk/one-click application submissions. In addition, yourCareerFair, as indicated by its name, allows for schools and institutions to host online and in-person career fairs using the site’s resources. As a recruiter, Instead of paper resumes simply have your attendants submit online resumes to your position page and focus more on interviews or interacting with your candidates.
+        yourCareerFair provides additional free services on top of its search engine and qualification level estimate assessments. The application maintains free application management and applicant tracking system functionality for all users. It allows recruiters to save notes on applicants, immediately notifies applicants when a recruiter makes a decision and allows for bulk/one-click application submissions. In addition, yourCareerFair, as indicated by its name, allows for schools and institutions to host online and in-person career fairs using the site’s resources. As a recruiter, instead of accepting paper resumes, simply have your atendees submit online resumes to your position page on yourCareerFair and focus more on interviews and interacting with your candidates as our algorithms handle the heavy lifting.
     </p>
 
     <h2> Job/Internship Account </h2>
@@ -39,19 +39,19 @@
         * Please read our legal policy on proper site usage
     </p>
 
-    <h2> Research Disclaimer </h2> 
+    <h2> Research Disclaimer </h2>
     <p>
         Some information will be used, without loss of confidentiality to the individual user, to research, among other subject matters, the efficacy of electronic/internet-based market mediums at encouraging the formation of efficient market places. Further studies will also be conducted on information gathered via this system to deduce whether or not more potentially desirable Pareto efficient outcomes can be achieved via the use of similar applications. Put colloquially, this website serves the dual purpose of a research tool to determine whether or not an application/tool similar to this can be utilized to increase the social utility of an economic system without actually interfering directly or significantly with market interactions. In addition to research, this site will publish general information regarding the labor market as determined by this site. This information will include, but is not limited to, general unemployment rates, the average number of applications submitted per person, etc. The hope is to create an open research platform for labor economic academic and legislative research.
     </p>
 
     <h1>Gregory Cho</h1>
-    <h2>Founder and CEO</h2> 
+    <h2>Founder and CEO</h2>
     <p>
         A Master’s Student at Brown University studying Computer Science and Economics, Gregory is dedicated to constructing technologies with significant social value and impact potential. After studying about the growing inefficiencies in the labor market, he constructed the numerous algorithms necessary for yourCareerFair to combat such pernicious effects and, thereby, increase social utility.
     </p>
 
     <h1>Dimitar Dimitrov</h1>
-    <h2>Co-Founder and Senior Front End Manager</h2> 
+    <h2>Co-Founder and Senior Front End Manager</h2>
     <p>
         A former employee of IBM and SLG, Dimitar Dimitrov is an extremely talented front end engineer who is responsible for overseeing the construction of many of this site’s front end resources.
     </p>
