--- a/client/src/app/components/error-page/error-page.component.html
+++ b/client/src/app/components/error-page/error-page.component.html
@@ -1,1 +1,17 @@
-<div [ngClass]="{'error-401': statusCode === 401, 'error-404': statusCode === 404}"></div>
+<div class="container">
+  <div class="container__full">
+    <div class="row">
+
+      <div *ngIf="statusCode === 401">
+        <h2>401 - Unauthorized</h2>
+        <p>You are not authorized to view this page due to invalid authentication.</p>
+      </div>
+
+      <div *ngIf="statusCode === 404">
+        <h2>404 - Page Not Found</h2>
+        <p>The page you are looking for might have been removed, had it name changed or is unavailable.</p>
+      </div>
+
+    </div>
+  </div>
+</div>
