--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -400,7 +400,7 @@
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(workExperienceFormArray.valid && checkAllWorkExperienceInfoValidation())"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!checkExperienceFormSkip() && !(workExperienceFormArray.valid && checkAllWorkExperienceInfoValidation())"></action-button>
     </div>
   </div>
   
