--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -508,7 +508,7 @@
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(projectsFormArray.valid && checkAllProjectsInfoValidation())"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!checkProjectsFormSkip() && !(projectsFormArray.valid && checkAllProjectsInfoValidation())"></action-button>
     </div>
   </div>
   
