--- a/client/src/app/pages/profile/create-profile/create-profile.component.html
+++ b/client/src/app/pages/profile/create-profile/create-profile.component.html
@@ -565,7 +565,7 @@
       </div>
     </div>
     <div class="container__full">
-      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(publicationsFormArray.valid && checkAllPublicationInfoValidation())"></action-button>
+      <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!checkPublicationsFormSkip() && !(publicationsFormArray.valid && checkAllPublicationInfoValidation())"></action-button>
     </div>
   </div>
   
