--- a/client/src/app/components/error-page/error-page.component.html
+++ b/client/src/app/components/error-page/error-page.component.html
@@ -4,12 +4,12 @@
 
       <div *ngIf="statusCode === 401">
         <h2>401 - Unauthorized</h2>
-        <p>You are not authorized to view this page due to invalid authentication.</p>
+        <p>You are not authorized to view this page.</p>
       </div>
 
       <div *ngIf="statusCode === 404">
         <h2>404 - Page Not Found</h2>
-        <p>The page you are looking for might have been removed, had it name changed or is unavailable.</p>
+        <p>The page you are looking for might have been removed, had its name changed, or is otherwise unavailable.</p>
       </div>
 
     </div>
