--- a/client/src/app/pages/profile/user-profile/user-profile.component.html
+++ b/client/src/app/pages/profile/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="!isProfileLoading" class="profile-header">
-  <header-section [editMode]="editMode" [generalInfo]="userGeneralInfo"
+  <header-section-1 [editMode]="editMode" [generalInfo]="userGeneralInfo"
     (updatedGeneralInfoData)="onChangedGeneralInfoData($event)" (updatedProfileStatus)="onChangeProfileStatus($event)"
-    id="header-section"></header-section>
+    id="header-section"></header-section-1>
 </ng-container>
 
 <ng-container *ngIf="!isProfileLoading">
@@ -13,16 +13,16 @@
     <a *ngIf="!editMode" (click)="onClickEdit()">Edit Profile</a>
     <a *ngIf="editMode" [class.disabled]="!headerFormValid" (click)="onClickUpdate()">Update Changes</a>
   </legend>
-  <main-section [selectedNavMenu]="navMenu[selectedNavMenuIndex].id" [userGeneralInfo]="userGeneralInfo"
+  <main-section-1 [selectedNavMenu]="navMenu[selectedNavMenuIndex].id" [userGeneralInfo]="userGeneralInfo"
     [educationList]="educationList" [experienceList]="experienceList" [userSkillsList]="userSkillsList"
     [userInterestsList]="userInterestsList" [userProjectsList]="userProjectsList"
     [userPublicationsList]="userPublicationsList" [externalResourcesList]="externalResourcesList" [editMode]="editMode"
     [class.edit-mode]="editMode" (navMenuVisibilityChanged)="onChangeNavMenuVisibility($event)"
-    (userIntroUpdated)="onChangeUserIntro($event)" (clickEdit)="onClickEdit()"></main-section>
-  <nav-section [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex"
+    (userIntroUpdated)="onChangeUserIntro($event)" (clickEdit)="onClickEdit()"></main-section-1>
+  <nav-section-1 [navMenu]="navMenu" [editMode]="editMode" [navIndex]="selectedNavMenuIndex"
     [headerFormValid]="headerFormValid" (clickUpdate)="onClickUpdate()" (selectNavMenu)="onSelectNavMenu($event)"
     (selectedNavItem)="onSelectNavItem($event)" [isOpened]="isNavMenuOpened"
-    [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section>
+    [class.nav-hidden]="!((isHandset$ | async) && isNavMenuOpened)" id="nav-section"></nav-section-1>
 </ng-container>
 
 <ng-container *ngIf="isProfileLoading">
