--- a/client/src/app/pages/profile/me/profile-section/profile-section.component.html
+++ b/client/src/app/pages/profile/me/profile-section/profile-section.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="selectedNavMenu === 'profile'">
+<ng-container>
 
   <div class="edit-title">
     <a *ngIf="!editMode" (click)="onClickEdit()">Edit Profile</a>
@@ -207,7 +207,7 @@
   </div>
 </ng-container>
 
-<ng-container *ngIf="selectedNavMenu === 'contacts'">
+<!-- <ng-container *ngIf="selectedNavMenu === 'contacts'">
   <div class="row">
     <div>
       <div class="img-tag">
@@ -242,4 +242,4 @@
       </div>
     </div>
   </div>
-</ng-container>
+</ng-container> -->
