Add template section

--- a/client/src/app/pages/profile/me/contacts-section/contacts-section.component.html
+++ b/client/src/app/pages/profile/me/contacts-section/contacts-section.component.html
@@ -1,1 +1,39 @@
-<p>contacts-section works!</p>
+<ng-container>
+  <div class="edit-title">
+  </div>
+
+  <div class="row">
+    <div>
+      <div class="img-tag">
+        <img src="assets/icons/ic_people_1.svg">
+        <label>Jack Richard</label>
+        <a>Los Angeles, California, USA</a>
+      </div>
+      <div class="img-tag">
+        <img src="assets/icons/ic_people_2.svg">
+        <label>Ryan Sandoval</label>
+        <a>Los Angeles, California, USA</a>
+      </div>
+      <div class="img-tag">
+        <img src="assets/icons/ic_people_3.svg">
+        <label>Ryan Sandoval</label>
+        <a>Los Angeles, California, USA</a>
+      </div>
+      <div class="img-tag">
+        <img src="assets/icons/ic_people_4.svg">
+        <label>Ryan Sandoval</label>
+        <a>Los Angeles, California, USA</a>
+      </div>
+      <div class="img-tag">
+        <img src="assets/icons/ic_people_5.svg">
+        <label>Ryan Sandoval</label>
+        <a>Los Angeles, California, USA</a>
+      </div>
+      <div class="img-tag">
+        <img src="assets/icons/ic_people_6.svg">
+        <label>Ryan Sandoval</label>
+        <a>Los Angeles, California, USA</a>
+      </div>
+    </div>
+  </div>
+</ng-container>
