--- a/client/src/app/pages/profile/me/profile-section/profile-section.component.scss
+++ b/client/src/app/pages/profile/me/profile-section/profile-section.component.scss
@@ -14,6 +14,7 @@
   :last-child {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+    border-bottom: none !important;
   }
 
   .edit-title {
