--- a/client/src/app/components/simple-tag/simple-tag.component.scss
+++ b/client/src/app/components/simple-tag/simple-tag.component.scss
@@ -21,12 +21,13 @@ $status-bg-color: #f4f5f8;
     position: relative;
     background-color: transparent;
     color: rgba($tag-normal-color, 0.84);
-    padding: 6px 15px;
+    padding: 4px 15px;
     border-radius: 500px;
     text-transform: capitalize;
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
     line-height: 16px;
+    font-weight: 400;
     border: solid 1px rgba($tag-normal-color, 0.1);
     background-clip: padding-box;
     &.tag-green {
@@ -65,7 +66,7 @@ $status-bg-color: #f4f5f8;
         flex-direction: column;
         justify-content: center;
         align-content: flex-start;
-        padding: 5px 15px;
+        padding: 5px 16px;
         border-radius: 18px;
         .ellipse-container {
             display: flex;
@@ -132,3 +133,7 @@ $status-bg-color: #f4f5f8;
         } 
     }
 }
+:host-context(.skill-prefer) .tag-container.tag-gray {
+    background-color: transparent;
+    border-color: rgba(map-get($md-cfgray, 500), 1);
+  }
