--- a/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.scss
+++ b/client/src/app/pages/profile/user-profile/contacts-section/contacts-section.component.scss
@@ -32,6 +32,10 @@
     background: white;
     padding: 25px 20px;
     border-bottom: 1px solid map-get($md-cfaccent, 50);
+    .load-more {
+      text-align: center;
+      margin: 20px 0;
+    }
     .btn-container {
       text-align: center;
       padding: 10px 0;
