CAR-000 Minor list ordering issues.

--- a/client/src/app/pages/read-more/read-more.component.html
+++ b/client/src/app/pages/read-more/read-more.component.html
@@ -13,26 +13,26 @@
     <h2> Job/Internship Account </h2>
     <p>
         - Get access to the latest positions registered by companies.
+        <br> - Gain access to qualification level estimates for any position instantly and for free.
         <br> - Use the application template tool to fill out all required information for job applications and never fill it out again.
         <br> - See which companies require, don’t require, prefer, or don’t prefer cover letters.
         <br> - Display your skills and express your goals on your profile page.
         <br> - Gain access to our unique search engine which matches your skill sets, education, experience, and education to the requirements of current openings.
         <br> - Keep track of all of your current job or internship applications and where they are in the selection process.
         <br> - Don’t worry, the email you provide us is only used if you forget your password and to verify your identity tentatively.
-        <br> - Gain access to qualification level estimates for any position instantly and for free.
     </p>
 
     <h2> Employer/Recruiter Account </h2>
     <p>
         - Gain access to a larger spectrum of the labor market and manage thousands of applicants with ease.
+        <br> - Gain access to qualification level estimates for candidates and sort as well as filter based on this parameter.
         <br> - Easily update and add new positions.
         <br> - Easily add your company to our database to allow for position creation and application submissions.*
         <br> - Effectively search through a vast array of applicants utilizing the customizable advanced search utility.
         <br> - Share notes on candidates with other recruiters and employers at your company.
         <br> - Have the option to redirect all recruiting-related emails and messages from applicants to your companies yourCareerFair account.
         <br> - Have the ability to share your applicant list with other recruiters in your company.
-        <br> - Have the ability to accept quickly, defer, wait list, or reject applications.
-        <br> - Gain access to qualification level estimates for candidates and sort as well as filter based on this parameter.
+        <br> - Have the ability to quickly accept, defer, wait list, or reject applications.
         <br> - Easily manage all career fairs hosted by your institution
         <br> - Manage all applicants for free on the recruiter app.
         <br><br>
